--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Flat Search Box | Webdevtrick.com</title>
+    <title>Flat Search Box </title>
     <link
       href="https://fonts.googleapis.com/css?family=Lato"
       rel="stylesheet"
